# rpi_cam_viewer

./: LICENSE  Notes_about_using_sudo.txt  README.md  camera_scan_and_test.sh  config.yaml  pyproject.toml
camviewer/: bootstrap.py  config.py  discovery.py  main.py  player.py  rtsp_probe.py  webapp.py
camviewer/templates/: edit.html  home.html
scripts/: camviewer-player.service  camviewer-web.service
